tests/neg-custom-args/captures/i23303.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23303.scala:5:36 ----------------------------------------
5 |    def execute: Unit = ops.foreach(f => f()) // error
  |                                    ^^^^^^^^
  |Found:    (f: () ->{any} Unit) ->{any²} Unit
  |Required: (() ->{any²} Unit) => Unit
  |
  |Note that capability `any²` cannot flow into capture set {any}.
  |
  |where:    =>   refers to a root capability created in method execute when checking argument to parameter f of method foreach
  |          any  is the root capability caps.any
  |          any² is a root capability in the type of value ops
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23303.scala:8:22 ----------------------------------------
8 |    () => ops.foreach(f => f()) // error
  |                      ^^^^^^^^
  |Found:    (f: () ->{any} Unit) ->{any²} Unit
  |Required: (() ->{any²} Unit) => Unit
  |
  |Note that capability `any²` cannot flow into capture set {any}.
  |
  |where:    =>   refers to a root capability created in anonymous function of type (): Unit when checking argument to parameter f of method foreach
  |          any  is the root capability caps.any
  |          any² is a root capability in the type of parameter ops
  |
  | longer explanation available when compiling with `-explain`
